--- a/code/src/index.css
+++ b/code/src/index.css
@@ -32,10 +32,12 @@ h1 {
   border: 1px solid gray;
   box-shadow: 5px 10px;
   background: #F5F5F5;
+  display: flex;
+  flex-direction: column;
   height: 35vh;
   margin-bottom: 4vh;
-  padding-left: 6vw;
-  width: 60vw;
+  padding-left: 10vw;
+  width: 70vw;
 }
 
 textarea {
@@ -43,7 +45,7 @@ textarea {
   margin-top: 1vh;
   margin-left: 0vw;
   resize: none;
-  width: 55vw;
+  width: 65vw;
 }
 
 .invalid-length, .valid-length {
@@ -65,7 +67,7 @@ textarea {
   margin: 8px 0;
   margin-bottom: 3vh;
   margin-top: 1vh;
-  width: 55vw;
+  width: 65vw;
 }
 
 /* The list of thoughts */
@@ -102,6 +104,7 @@ textarea {
   width: 9vw;
 }
 
+
 @media(min-width: 1024px) {
 h1 {
   font-size: 32px;
@@ -109,7 +112,6 @@ h1 {
 }
 
 .question-card {
-  box-shadow: 5px 10px;
   height: 35vh;
   margin-bottom: 4vh;
   padding-left: 1vw;
@@ -119,16 +121,12 @@ h1 {
 textarea {
   height: 5vh;
   margin-left: 0;
-  margin-top: 0vh;
+  margin-top: 0;
   width: 27vw;
 }
 
 .send-form {
-  border-radius: 16px;
-  cursor: pointer;
   font-size: 14px;
-  font-weight: bold;
-  margin: 8px 0;
   margin-bottom: 8vh;
   margin-top: 3vh;
   padding: 10px 18px;
@@ -136,9 +134,9 @@ textarea {
 }
 
 .cards {
-  box-shadow: 5px 10px;
   height: 23vh;
   margin-bottom: 4vh;
+  padding-bottom: 1vh;
   padding-left: 1vw;
   width: 30vw;
 }
