--- a/code/src/Components/happyThought.css
+++ b/code/src/Components/happyThought.css
@@ -1,24 +1,38 @@
-body {
-  display: flex;
-  justify-content: center;
-}
-
 .happy-thought {
   border: 2px solid black;
   box-shadow: 4px 4px black;
-  width: 300px;
-  height: 130px;
+  width: 450px;
+  height: 1100%;
   margin: 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 20px;
+  overflow-wrap: break-word;
+  font-family: "Menlo";
 }
 
 .happy-thought h3 {
   font-family: "Inconsolata", monospace;
   font-size: 16px;
   margin: 0;
+}
+
+.happy-thought button {
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-right: 4px;
+}
+
+.happy-thought button:hover {
+  cursor: pointer;
+}
+
+.happy-thought button span {
+  margin-left: 2px;
+  line-height: 2.8;
 }
 
 body {
