--- a/code/src/thought.css
+++ b/code/src/thought.css
@@ -18,6 +18,7 @@ p {
 .bar {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 0.8em;
   color: rgb(102, 101, 101);
   margin-top: 1.2em;
@@ -25,8 +26,17 @@ p {
 
 .likes {
   display: flex;
+  align-items: center;
 }
 
 .heart {
-  width: 30px;
+  width: 17px;
+}
+
+.likeButton {
+  border-radius: 50%;
+  padding: 9px;
+  margin-right: 5px;
+  background-color: lightgrey;
+  border: lightgrey;
 }
