--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -32,7 +32,7 @@ h3 {
 
 .sendThought {
     height: 50px;
-    width: 70%;
+    width: 200px;
     background-color: #ffadad;
     border: none;
     font-size: 14px;
