--- a/code/src/components/happyThought.css
+++ b/code/src/components/happyThought.css
@@ -11,8 +11,9 @@
 button.heart {
     border: none;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
+    padding: 0;
     margin-right: 4px;
 }
 
