--- a/code/src/index.css
+++ b/code/src/index.css
@@ -123,10 +123,17 @@ main {
   color: #d5d5d5;
 }
 
-/** LOADING **/
+/** LOADING and ERROR **/
 
-.loading {
+.loading,
+.error {
   text-align: center;
+}
+
+.error {
+  color: red;
+  padding-bottom: 2rem;
+  font-size: 1.5rem;
 }
 
 @media (min-width: 500px) {
