--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,3 +12,9 @@ body {
 code {
   font-family: 'Inconsolata', monospace;
 }
+
+footer {
+  font-size: 14px;
+  text-align: center;
+  margin: 30px 0;
+}
