--- a/code/src/App.css
+++ b/code/src/App.css
@@ -12,6 +12,7 @@ h2{
 p{
   color: #c0c0c0;
   font-size: 12px;
+  display: inline;
 }
 
 .mainContainer{
@@ -20,19 +21,6 @@ p{
   align-items: center;
   flex-direction: column;
 }
-
-.count{
-  font-size: 12px;
-  color: #b3b3b3;
-  /* display: inline; */
-}
-
-.countContainer{
-  display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 
 form{
   display: flex;
@@ -71,20 +59,6 @@ textarea:focus{
   margin: 0 0 2px 0;
 }
 
-article{
-  font-family: 'Roboto Mono', monospace;
-  margin: 20px;
-  width:320px;
-  height: 150px;
-  background: #FFF;
-  border: 1px solid black;
-  box-shadow: 7px 7px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-between;
-  padding: 0 5px 0 0;
-}
 
 button{
   background: #ffadad;
@@ -96,13 +70,3 @@ button{
   margin: 12px;
 }
 
-.likeButton{
-  border-radius: 50%;
-  background: #eaeaea;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 7px;
-}
