--- a/code/src/index.css
+++ b/code/src/index.css
@@ -49,7 +49,11 @@ textarea {
   color: black;
 }
 
-.heart {
+.submitButton:hover {
+  background: #bbb7b8;
+}
+
+.button-text {
   padding: 5px;
 }
 
@@ -92,9 +96,6 @@ h1 {
 
 .likes {
   margin-top: 15px;
-}
-
-.heartLike {
 }
 
 button {
