--- a/code/src/components/happythoughts.css
+++ b/code/src/components/happythoughts.css
@@ -1,20 +1,9 @@
-form {
-    display: inline-block;
-}
-
-/* article {
-    background: #fff;
-} */
-
 textarea {
-    resize: none;
-    width: 100%;
-    height: 50px;
-}
-
-.highlight-pink {
     font-size: 18px;
-    color: rgb(231, 71, 97);
+    border: black solid 1px;
+    resize: none;
+    width: 440px;
+    height: 50px;
 }
 
 .highlight-grey {
@@ -25,25 +14,25 @@ button:focus {
     outline: 0 !important;
 }
 
-.thought-card {
+.post-thought-card {
     width: 450px;
-    background: #EFEBE9;
+    background: #e5dfdf;
     display: flex;
     flex-direction: column;
     margin: 30px 0;
-    padding: 18px 15px 15px 15px;
+    padding: 15px 15px 15px 15px;
     border: 1px solid black;
     -webkit-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
     -moz-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
     box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
 }
 
-.thought-card:not(form) {
+.thought-card {
     width: 450px;
     background: #fff;
     display: flex;
     flex-direction: column;
-    margin: 30px 0;
+    margin: 20px 0;
     padding: 18px 15px 15px 15px;
     border: 1px solid black;
     -webkit-box-shadow: 10px 8px 0px -2px rgba(0, 0, 0, 1);
@@ -71,29 +60,18 @@ button:focus {
 }
 
 .heart-btn {
-    background-color: #e7e7e7;
     height: 40px;
     width: 40px;
     border-radius: 50%;
     border: 0px;
-    /* display: flex; */
-    
-} 
-
-.heart-btn:hover {
-    background-color: rgb(247, 168, 223);
     cursor: pointer;
+    /* display: flex; */
 }
 
-/* 
 .heart-btn span {
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-} */
-
+    margin-left: 5px;
+    font-size: 17px;
+}
 
 .send-btn {
     height: 40px;
@@ -105,14 +83,8 @@ button:focus {
     cursor: pointer;
 }
 
-.send-btn:disabled,
-.send-btn[disabled]{
-  border: 1px solid #999999;
-  background-color: #cccccc;
-  color: #666666;
+.send-btn:disabled, .send-btn[disabled] {
+    border: 1px solid #999999;
+    background-color: #cccccc;
+    color: #666666;
 }
-
-/* .send-btn {
-    /* background-color: plum; */
-
-/* } */
