--- a/code/src/index.css
+++ b/code/src/index.css
@@ -3,14 +3,29 @@ body {
   font-family: 'Inconsolata', monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  display: flex;
-  justify-content: center;
 }
 
-code {
+* {
   font-family: 'Inconsolata', monospace;
 }
 
 h3 {
   font-size: 15px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  height: 100px;
+  background: #e5dfdf;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
 }
