--- a/code/src/index.css
+++ b/code/src/index.css
@@ -13,9 +13,7 @@ code {
 }
 
 .post-wrapper {
-  margin: auto;
   padding: 40px;
-  font-size: 16px;
 }
 
 h2 {
@@ -26,9 +24,8 @@ h2 {
 .card {
   font-family: "Source Code Pro", monospace;
   width: 450px;
-  height: 210px;
   margin: auto;
-  background-color: rgb(238, 238, 238);
+  background-color: #eeeeee;
   padding: 10px 8px;
   border: 2px grey solid;
   -webkit-box-shadow: 17px 17px 0px -6px rgba(0, 0, 0, 1);
@@ -36,49 +33,93 @@ h2 {
   box-shadow: 17px 17px 0px -6px rgba(0, 0, 0, 1);
 }
 
-.new-post p {
-  margin: 8px 10px;
+.new-post {
+  margin-bottom: 40px;
+  height: 210px;
 }
+
+textarea {
+  height: 50px;
+  width: 400px;
+  margin: 5px;
+  border: 2px, #808080 solid;
+  resize: none;
+  font-size: 18px;
+}
+
+.new-post p {
+  margin: 0 40px;
+  text-align: right;
+}
+
 .card {
   height: 150px;
   margin-bottom: 40px;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 .card-bottom {
   margin-top: 40px;
   display: flex;
   justify-content: space-between;
+  color: rgb(128, 128, 128);
 }
 
 .likes {
   display: flex;
 }
-textarea {
-  height: 50px;
-  width: 400px;
-  margin: 5px;
-  border: 2px, rgb(128, 128, 128) solid;
-  resize: none;
-  font-size: 18px;
-}
 
 .submit-button {
   width: 190px;
   height: 45px;
-  margin-top: 8px;
+  margin-top: 15px;
   border-radius: 20px;
-  background-color: rgb(254, 168, 182);
+  background-color: #fea8b6;
 }
 
 .like-button {
   border-radius: 50%;
   height: 40px;
   width: 40px;
-  background: rgb(238, 238, 238);
+  background: #eeeeee;
   border: none;
 }
 
 .like-button-red {
-  background: rgb(254, 168, 182);
+  background: #fea8b6;
+}
+
+.submit-button,
+.like-button:focus {
+  outline: 0;
+  border: #e28686 2px solid;
+}
+
+@media (max-width: 668px) {
+  .post-wrapper {
+    padding: 20px 0 0 0;
+  }
+
+  .card,
+  .new-post {
+    width: 80%;
+  }
+
+  .card-bottom {
+    margin-top: 25px;
+  }
+
+  textarea {
+    width: 95%;
+  }
+
+  .new-post p {
+    margin: 0 5px;
+  }
+
+  .submit-button {
+    width: 190px;
+    height: 45px;
+    margin: 8px 5px;
+  }
 }
