--- a/code/src/components/happyForm.css
+++ b/code/src/components/happyForm.css
@@ -2,7 +2,7 @@
     background-color: #f3f1f1;
     border: 2px solid black;
     box-shadow: 4px 4px black;
-    width: 300px;
+    width: 400px;
     margin: 16px;
     display: flex;
     flex-direction: column;
@@ -14,6 +14,7 @@
     width: 100%;
     resize: none;
     padding: 10px;
+    font-family: 'Josefin Sans', sans-serif;
     font-size: 16px;
     box-sizing: border-box;
     margin: 10px 0;
@@ -25,13 +26,14 @@
 
 .happy-form button {
     height: 50px;
-    width: 60%;
+    width: 50%;
     background-color: #ffadad;
     border: none;
-    font-size: 14px;
-    border-radius: 25px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 17px;
+    border-radius: 22px;
     padding: 10px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .happy-form button:hover {
@@ -43,4 +45,9 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
+}
+
+.form-footer p {
+    font-size: 16px;
+    font-weight: 600;
 }
