--- a/code/src/index.css
+++ b/code/src/index.css
@@ -4,15 +4,15 @@
   padding: 0;
 }
 
-body {
+body,
+html {
   font-family: "Inconsolata", monospace;
   font-weight: 700;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #000;
-  margin: 0 auto;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 button {
@@ -133,7 +133,7 @@ main {
 .error {
   color: red;
   padding-bottom: 2rem;
-  font-size: 1.5rem;
+  font-size: 1.5rem8;
 }
 
 @media (min-width: 500px) {
