--- a/code/src/components/comments.css
+++ b/code/src/components/comments.css
@@ -12,6 +12,7 @@
 .comment-wrapper {
   display: flex;
   flex-direction: column;
+  margin-bottom: 5px;
   color: #6e6e6e;
   font-size: 11px;
   overflow-wrap: break-word;
@@ -43,14 +44,15 @@
 }
 
 .comment-button {
-  display:inline-block;
+  display: inline-block;
   padding: 9px 50px;
   border: none;
 	border-radius: 3px;
-  background-color:#ffe6e6;
-  font-size: 10px;
-  text-decoration:none;
-  cursor:pointer;
+  background-color: #ffe6e6;
+  font-family: 'Limelight', cursive;
+  font-size: 12px;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .comment-button:hover {
