--- a/code/src/app.scss
+++ b/code/src/app.scss
@@ -131,17 +131,19 @@ input[type=text] {
 .post-btn {
   display: block;
   margin-top: 1.5rem;
-  padding: .8rem 1.5rem .9rem;
-  border-radius: 30px;
+  padding: .9rem 1.4rem .7rem;
   background-color: $color-pink;
+  border: 0;
+
+  border-bottom: 5px solid $color-pink;
   font-family: inherit;
   font-size: inherit;
   font-weight: 500;
-  border: 0;
   transition: all .15s ease-in-out;
 
   &:hover:not(:disabled) { // Hover only if button is not disabled
-    background-color: darken($color-pink, 5%);
+    background-color: darken($color-pink, 2%);
+    border-bottom: 5px solid darken($color-pink, 20%);
   }
 
   &:disabled {
