--- a/code/src/index.css
+++ b/code/src/index.css
@@ -7,15 +7,11 @@ body {
   font-size: 16px;
   background: #fff;
   display: flex;
-  /* flex-flow: column nowrap;
-  align-items: center;
-  align-content: center; */
   justify-content: center;
 }
 
 .app-container {
   width: 500px;
-  /* background: paleturquoise; */
 }
 
 h1 {
@@ -31,9 +27,6 @@ form {
   border: 2px solid #4d4d4d;
   background: #f2f0f0;
   box-shadow: 6px 7px;
-  /* flex-direction: column;
-  align-items: flex-start;
-  text-align: left; */
 }
 
 .post-prompt {
@@ -43,7 +36,7 @@ form {
 }
 
 .form-text {
-  height: 75px;
+  height: 100px;
   width: 460px;
   margin: 0 15px;
   padding: 8px 15px;
@@ -57,10 +50,21 @@ form {
   overflow: auto;
 }
 
-.counter {
-  color: #ccc;
-  background: green;
+.counter, .p-red, .p-green {
+  margin-right: 12px;
+  padding: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 12px;
+  color: #4d4d4d;
+  float: right;
+}
 
+.p-red {
+  color: #990000;
+}
+
+.p-green{
+  color: #006400;
 }
 
 .submit-button {
@@ -79,13 +83,18 @@ form {
 }
 
 /* Published posts */
+section {
+  display: flex;
+  flex-direction: column-reverse;
+
+}
+
 .pubPost {
   min-height: 80px;
   margin-top: 40px;
   padding: 10px 16px;
   box-shadow: 6px 7px;
   border: 2px solid #4d4d4d;
-  /* background: lightseagreen; */
   display: flex;
   flex-flow: column nowrap;
 }
@@ -123,10 +132,11 @@ form {
 }
 
 .heart-button { 
-  margin: 0px 13px;
+  margin: 0px 15px;
   font-size: 15px;
   /* background: yellow; */
   width: 200px;
+  cursor: pointer;
 }
 
 .heart-button:after {
@@ -138,4 +148,21 @@ form {
   font-size: 15px;
   color: #4d4d4d;
   /* background: cornflowerblue; */
+}
+
+
+/* Footer */
+footer {
+  margin: 60px 0;
+  font-size: 10px;
+}
+
+footer a {
+  text-decoration: none;
+  cursor: pointer;
+  color: #4d4d4d;
+}
+
+footer a:hover {
+  color: #ffadad;
 }
