--- a/code/src/index.css
+++ b/code/src/index.css
@@ -20,7 +20,7 @@ main {
   max-width: 100%;
   margin: 0 auto;
   padding: 16px 16px;
-  border: 1px dashed rgba(255,255,255,0.4);
+  /* border: 1px dashed rgba(255,255,255,0.4); */
   overflow: scroll;
 }
 
