--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,63 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: monospace, sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.thoughts-container {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.thoughts-card {
+  width: 450;
+  height: 250px;
+  height: min-content;
+  background-color: white;
+  color: black;
+  box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 1);
+  border: 1px solid black;
+  margin: 10px;
+  display: inline-block;
+  box-sizing: border-box;
+  justify-content: left;
+  text-align: left;
+  padding: 10px;
+}
+
+.new-thought {
+  color: black;
+  width: 450;
+  height: 250px;
+  color: rgb(242, 240, 240);
+  box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 1);
+  border: 1px solid black;
+  background-color: whitesmoke;
+  padding: 10px;
+}
+
+.thought {
+  color: black;
+  font-family: monospace, sans-serif;
+  font-size: 20px;
+  margin: 5px 5px 5px 15px;
+  padding: 10px;
+}
+
+.time-stamp {
+  font-size: 16px;
+  border: 2px solid black;
+  color: #bebebe;
+  font-weight: 900;
+  margin: 5px 5px 5px 30px;
+  /* display: flex;
+  justify-content: flex-end; */
+  /* position: relative; */
+  /* margin-top: 40px;
+  margin-left: 80px;
+  display: inline-block; */
 }
