--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,6 +1,14 @@
+@font-face {
+  font-family: 'Menlo Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Menlo Regular'), url('./Menlo-Regular.ttf') format('ttf');
+  src: local('Menlo Regular'), url('./Menlo-Regular.woff') format('woff');
+  }
+
 body {
   margin: 0;
-  font-family: monospace, 'Courier New', Courier;
+  font-family: 'Menlo Regular', monospace, 'Courier New', Courier;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-weight: 500;
@@ -16,7 +24,7 @@ body {
 
 h1 {
   margin-top: 60px;
-  font-size: 30px;
+  font-size: 36px;
   text-align: center;
 }
 
@@ -40,7 +48,7 @@ form {
   width: 460px;
   margin: 0 15px;
   padding: 8px 15px;
-  font: 500 16px monospace, 'Courier New', Courier;
+  font: 500 16px  'Menlo Regular', monospace, 'Courier New', Courier;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -51,7 +59,7 @@ form {
 }
 
 .counter, .p-red, .p-green {
-  margin-right: 12px;
+  margin: 0px 12px 0 0;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 12px;
@@ -68,8 +76,8 @@ form {
 }
 
 .submit-button {
-  margin: 10px 0 15px 15px;
-  padding: 10px 11px;
+  margin: 10px 0 17px 15px;
+  padding: 10px 11px 15px 11px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 17px;
   border: 0;
@@ -86,7 +94,6 @@ form {
 section {
   display: flex;
   flex-direction: column-reverse;
-
 }
 
 .pubPost {
@@ -100,8 +107,9 @@ section {
 }
 
 .post-txt {
-  font-size: 18px;
-  background: #fff;
+  padding-bottom: 26px;
+  font-size: 16px;
+  word-break: break-all;
 }
 
 .post-info {
@@ -113,48 +121,69 @@ section {
 }
 
 .post-time {
-  margin-top: 6px;
+  margin-top: 0;
   padding: 0;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 14px;
+  font-size: 13px;
   color: #a6a6a6;
   float: right;
   /* background: hotpink */
 }
 
-.likes {
+/* .like .you-liked-this .no-like {
   margin: -38px -2px;
   height: 50px;
   width: 50px;
   border-radius: 50%;
+  border: none;
+  background: #edebea;
+  cursor: pointer;
+} */
+
+.you-liked-this {
+  margin: -38px -2px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
+  background: #ffadad;
+  cursor: pointer; 
+}
+
+.no-like {
+  margin: -38px -2px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: none;
   background: #edebea;
   cursor: pointer;
 }
 
-.heart-button { 
-  margin: 0px 15px;
+.no-like:hover {
+  background: #f5d6d6;
+}
+
+
+
+.like-span { 
+  margin: 0px;
   font-size: 15px;
-  /* background: yellow; */
   width: 200px;
   cursor: pointer;
 }
 
-.heart-button:after {
-  background: #ffadad;
-}
-
 .like-count {
-  margin: 6px 57px;
-  font-size: 15px;
+  margin: -19px 57px;
+  font-size: 13px;
   color: #4d4d4d;
   /* background: cornflowerblue; */
 }
 
-
 /* Footer */
 footer {
   margin: 60px 0;
-  font-size: 10px;
+  font-size: 14px;
 }
 
 footer a {
