--- a/code/src/components/newmessagebox.css
+++ b/code/src/components/newmessagebox.css
@@ -8,6 +8,8 @@
   box-shadow: 0px -2px 8px rgba(0, 0, 0, 0.15), 0px -8px 24px rgba(255, 88, 108, 0.2);
   border-radius: 16px 16px 0 0;
   padding: 16px;
+  max-width: 760px;
+  margin: 0 auto;
 }
 
 .composer {
