--- a/code/src/MessageInput.css
+++ b/code/src/MessageInput.css
@@ -3,9 +3,9 @@
     width: 30%;
     background-color: #ffadad;
     border: none;
-    font-size: 2vw;
     border-radius: 25px;
     font-weight: 500;
+    font-size: larger;
 }
 
 .button:hover {
