--- a/code/src/index.css
+++ b/code/src/index.css
@@ -41,16 +41,26 @@ code {
   width: 400px;
   min-height: 200px;
   border: 3px solid #989898;
-  margin-bottom: 30px;
+  margin-bottom: 30px; 
   padding: 10px;
 }
 
+ .message-card {
+    display: flex;
+    flex-wrap: wrap;
+} 
+
 .form-card{
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   /* align-items: center; */
-  justify-content: space-around;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* padding: 5px; */
+}
 
+.length {
+  align-self: flex-end;
 }
 
 .form-button{
@@ -68,6 +78,10 @@ code {
   width: 360px;
   height: 100px;
   align-self: center;
+}
+
+.message {
+  width: 360px;
 }
 
 
