--- a/code/src/index.css
+++ b/code/src/index.css
@@ -24,7 +24,7 @@ body {
 
 h1 {
   margin-top: 60px;
-  font-size: 36px;
+  font-size: 32px;
   text-align: center;
 }
 
@@ -77,7 +77,7 @@ form {
 
 .submit-button {
   margin: 10px 0 17px 15px;
-  padding: 10px 11px 15px 11px;
+  padding: 7px 11px 12px 11px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 17px;
   border: 0;
@@ -93,7 +93,7 @@ form {
 /* Published posts */
 section {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
 }
 
 .pubPost {
@@ -107,9 +107,11 @@ section {
 }
 
 .post-txt {
+  margin: 16px 3px;
   padding-bottom: 26px;
   font-size: 16px;
   word-break: break-all;
+  /* background: cornflowerblue; */
 }
 
 .post-info {
@@ -117,7 +119,7 @@ section {
   padding: 0;
   height: 16px;
   display: inline-block;
-  /* background: papayawhip; */
+  background: papayawhip;
 }
 
 .post-time {
@@ -141,7 +143,7 @@ section {
 } */
 
 .you-liked-this {
-  margin: -38px -2px;
+  margin: -38px 4px;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -151,7 +153,7 @@ section {
 }
 
 .no-like {
-  margin: -38px -2px;
+  margin: -38px 4px;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -163,8 +165,6 @@ section {
 .no-like:hover {
   background: #f5d6d6;
 }
-
-
 
 .like-span { 
   margin: 0px;
