--- a/code/src/components/thoughts.css
+++ b/code/src/components/thoughts.css
@@ -14,12 +14,14 @@
     width: 250px;
 }
 
-.thoughts__time-posted {
+.thoughts__time-posted, .thoughts__amount-of-likes {
     font-size: 16px;
     padding: 2px;
 }
 
+/*How to solve when someone writes a really long word?*/
 .thoughts__message {
     font-size: 22px;
+    white-space: pre-wrap;
 }
 
