--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -10,4 +18,122 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+/**  FORM SECTION **/
+
+.form-section {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  background-color: #F2F0F0;
+  border: solid 1px #000000;
+  box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
+  padding: 15px;
+  margin: 20px;
+  font-size: 12px;
+  width: 400px;
+}
+
+label {
+  margin-bottom: 10px;
+}
+
+textarea {
+  width: 100%;
+  min-height: 50px;
+  border: solid 1px #C9C9C9;
+  padding: 10px;
+  font-family: Menlo;
+  font-size: 12px;
+  resize: none;
+}
+
+.thought-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #FFADAD;
+  border: none;
+  border-radius: 25px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 11px;
+  font-weight: 500;
+  color: #000000;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+/**  THOUGHTS SECTION **/
+
+.thoughts-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.thought-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #FFFFFF;
+  border: solid 1px #000000;
+  box-shadow: 13px 14px 0px -6px rgba(0,0,0,1);
+  padding: 15px;
+  margin: 20px;
+  font-size: 12px;
+  width: 400px;
+}
+
+.text-message {
+  font-family: Menlo;
+  width: auto;
+}
+
+.thought-items-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.text-time {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 10px;
+  font-weight: 600;
+  color: #C1C1C1;
+}
+
+
+/** HEART **/
+
+.heart-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.heart-text {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto";
+  font-size: 10px;
+  font-weight: 600;
+  color: #8F8F8F;
+  margin-left: 4px;
+}
+
+.heart-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #EAEAEA;
+  width: 35px;
+  height: 35px;
+  border: none;
+  border-radius: 50%;
 }
