--- a/code/src/index.css
+++ b/code/src/index.css
@@ -11,3 +11,76 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.send-thought {
+  border: 1px solid black;
+  width: 350px;
+  height: 150px;
+  margin: 30px 0;
+  padding: 10px;
+  box-shadow: 5px 5px 1px black;
+}
+
+.send-thought form {
+  display: flex;
+  flex-direction: column;
+}
+
+.send-thought textarea {
+  resize: none;
+}
+
+.thought-card {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  width: 350px;
+  height: 120px;
+  margin-bottom: 30px;
+  padding: 10px;
+  box-shadow: 5px 5px 1px black;
+  word-break: break-word;
+}
+
+.thought-text {
+  font-family: Courier New, monospace;
+}
+
+.time-text {
+  font-size: 12px;
+  color: rgb(187, 186, 186);
+}
+
+.like-text {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  color: rgb(187, 186, 186);
+  text-align: right;
+}
+
+.liked-heartemoji {
+  padding: 6px;
+  border-radius: 50%;
+  background-color: rgb(221, 218, 218);
+  margin-right: 5px;
+}
+
+.top-of-card {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.bottom-of-card {
+  height: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+}
