--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  background-color: lightyellow;
+  margin: 20px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +11,108 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+h1 {
+  color: plum;
+  font-size: 22px;
+  display: block;
+  width: fit-content;
+  margin: 10px auto 30px;
+  text-transform: uppercase;
+}
+
+p {
+  margin: 10px;
+  color: plum;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+}
+
+.thoughtWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 150px;
+  border: 1px solid plum;
+  box-shadow: 5px 5px 2px plum;
+  margin: 5px auto;
+}
+
+.newThoughtWrapper {
+  background-color: plum;
+  color: lightyellow;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 150px;
+  margin: 0 auto 20px;
+}
+
+.newThoughtWrapper label {
+  font-size: 18px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+input {
+  width: 100px;
+  height: 20px;
+  margin: 10px auto 0;
+  font-size: 14px;
+  border: 1px solid purple;
+  border-radius: 5px;
+}
+
+.hearts {
+  font-size: 14px;
+  background-color: plum;
+  border: none;
+  padding: 8px;
+  border-radius: 50%;
+}
+
+.sendThought {
+  font-size: 14px;
+  background-color: lightyellow;
+  color: purple;
+  border: none;
+  padding: 8px;
+  border-radius: 5px;
+  margin: 15px auto 0;
+}
+
+.date {
+  font-style: italic;
+}
+
+/* MEDIA QUERIES */
+
+/*TABLET*/
+
+@media (min-width: 670px) {
+  h1 {
+    font-size: 28px;
+    margin: 50px auto;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+  }
+
+  .newThoughtWrapper {
+    width: 600px;
+    height: 200px;
+    margin: 20px auto 40px;
+  }
 }
