--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,164 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.recent-thoughts-section {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.post-a-thought-container,
+.thought-card {
+  border: 2px solid #7c7b7b;
+  font-family: 'Courier New';
+  font-weight: 700;
+  margin: 16px auto;
+  padding: 20px 16px;
+  grid-column: span 1;
+  width: 38%;
+  box-shadow: 10px 10px #000;
+}
+
+.post-a-thought-container h2 {
+  font-size: 20px;
+}
+
+/* .post-a-thought-container input {
+  font-family: 'Courier New';
+  width: 100%;
+  height: 100px;
+  padding: 10px 10px 50px 10px;
+  font-size: 16px;
+  font-weight: 700;
+  display: flex;
+  flex-flow: row wrap;
+} */
+
+/* disable the resizing of textarea */
+textarea {
+  resize: none;
+  border: 2px solid #c9c8c8;
+  width: 100%;
+  height: 62px;
+  font-size: 16px;
+}
+
+textarea:invalid {
+  color: red;
+}
+
+textarea:valid {
+  color: black;
+}
+
+.remaining-chars {
+  color: #d2d2d2;
+  font-size: 16px;
+  margin: 0;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.post-a-thought-container button {
+  font-family: 'Courier New';
+  font-size: 16px;
+  font-weight: 700;
+  margin-top: 10px;
+  padding: 12px 24px;
+  background: #ffadad;
+  border: none;
+  border-radius: 30px;
+  cursor: pointer;
+}
+
+.post-a-thought-container button:hover {
+  background-image: linear-gradient(
+    90deg,
+    #00c0ff 0%,
+    #ffcf00 49%,
+    #fc4f4f 80%,
+    #00c0ff 100%
+  );
+  animation: rainbow 5s linear infinite;
+}
+
+.heart-timestample-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #d2d2d2;
+}
+
+.hearts-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #a4a4a4;
+  font-size: 16px;
+}
+
+.hearts-container button {
+  cursor: pointer;
+}
+
+.hearts-container button:hover {
+  background: #ffadad;
+  animation: heartbeat 2s infinite;
+}
+
+.heart-emoji {
+  background: #eaeaea;
+  border: none;
+  border-radius: 50%;
+  width: fit-content;
+  padding: 8px 16px 8px 12px;
+}
+
+@keyframes rainbow {
+  to {
+    background-position: 20vw;
+  }
+}
+
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(0.97);
+  }
+  35% {
+    transform: scale(0.9);
+  }
+  45% {
+    transform: scale(1.1);
+  }
+  55% {
+    transform: scale(0.9);
+  }
+  65% {
+    transform: scale(1.1);
+  }
+  75% {
+    transform: scale(1.03);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
