--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,10 +1,15 @@
+@import url(//db.onlinewebfonts.com/c/395410b1fd4cca8cfb17bd78a9c34889?family=Helvetica+Monospaced);
+
 body {
   margin: 20px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: Helvetica Monospaced;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-weight: 500;
+  font-size: 16px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
 }
 
 code {
@@ -14,4 +19,58 @@ code {
 
 .date {
   font-style: italic;
+}
+
+form {
+  height: 200px;
+  width: 500px;
+  padding: 15px;
+  border: 2px solid #4d4d4d;
+  background: #f2f0f0;
+  box-shadow: 6px 7px;
+  box-sizing: border-box;
+  
+}
+form textarea {
+margin-top: 15px;
+
+}
+
+.form-text {
+  box-sizing: border-box;
+  width: 100%;
+  margin: 10px 0;
+  padding: 15px;
+  resize: none;
+}
+
+.heart-button {
+  padding: 10px;
+  font-family: Helvetica Monospaced;
+  font-size: 14px;
+  border: 0;
+  background: #ffadad;
+  border-radius: 50px;
+  cursor: pointer;
+}
+
+.character-counter {
+  font-size: 14px;
+  margin: 0;
+  text-align: right;
+}
+
+.toughts-box {
+  width: 500px;
+  margin-top: 40px;
+  padding: 10px 16px;
+  box-shadow: 6px 7px;
+  border: 2px solid #4d4d4d;
+  flex-flow: column nowrap;
+  box-sizing: border-box;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
 }
