--- a/code/src/index.css
+++ b/code/src/index.css
@@ -12,6 +12,52 @@ code {
     monospace;
 }
 
-.date {
-  font-style: italic;
+.main-container {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.input-container {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(240, 239, 239);
+  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 0px, 5px, 5px, 0px black;
+}
+
+.input {
+  display: flex;
+  border: 0.5px solid lightgray;
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.submit-button {
+  border: none;
+  background-color: rgb(245, 177, 169);
+  border-radius: 20px;
+  padding-top: 2px;
+  padding-right: 15px;
+  padding-bottom: 2px;
+  padding-left: 15px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.submit-button-text {
+  margin: 0;
+}
+
+.thought-container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: rgb(240, 239, 239); */
+  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 0px, 5px, 5px, 0px black;
 }
